# BigWorldSetup-Next-Generation

./: BigWorldSetup.spec  README.md  constants.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: Packager.yml  data-update.yml  validate-mods.yml  validation.yml
bwsng/core/: TranslationManager.py
bwsng/i18n/: en_US.json
bwsng/ui/: main_window.py
core/: ArchiveExtractor.py  BackupInfo.py  BackupManager.py  CompactJSONEncoder.py  ComponentReference.py  DataUpdater.py  DirectoryMerger.py  DownloadManager.py  File.py  GameManager.py  GameModels.py  InstallationWorker.py  Mod.py  ModManager.py  Platform.py  RuleManager.py  Rules.py  StateManager.py  TranslationManager.py  Url.py  ValidationOrchestrator.py  VersionChecker.py  WeiDUDebugParser.py  WeiDUInstallerEngine.py  WeiDULogParser.py  WeiDUTp2Parser.py  weidu_types.py
core/enum/: GameEnum.py
core/enums/: CategoryEnum.py  GameEnum.py
core/validators/: FolderValidator.py  StructureValidator.py
data/games/: bg2ee.json  bgee.json  eet.json  iwdee.json  pstee.json  sod.json
data/mods/: 1sylm.json  5E_spellcasting.json  A7#ImprovedArcher.json  A7#ImprovedShamanicDance.json  A7-Achievements.json  A7-BanterAccelerator.json  A7-ChaosSorcerer.json  A7-ConvenientEENPCs.json  A7-CustomKits.json  AMDK.json  (+420 more)
i18n/: de_DE.json  en_US.json  es_ES.json  fr_FR.json  it_IT.json  ko_KR.json  pl_PL.json  ru_RU.json  zh_CN.json
ui/: CacheDialog.py  MainWindow.py  SplashScreen.py  main_window.py
util/: ini_to_json_converter.py  lcc_cache_manager.py  lcc_definition_updater.py
validation/: validator.py
(+39 files in other folders)
